# simple-ipc

./: Cargo.toml  rustfmt.toml
src/: client.rs  error.rs  lib.rs  server.rs
