[package]
name = "simple-ipc"
version = "0.1.0"
edition = "2021"
description = "A simple IPC library for Rust"
license = "MIT"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7"
thiserror = "2.0.11"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
tracing = "0.1"
bincode = "1.3.3"
